--- a/style/_variables.scss
+++ b/style/_variables.scss
@@ -1,11 +1,11 @@
 // VARIABLES ----------------------------------------------------------------------
 $colores: (
-    'rosa': rgb(240, 205, 205),
-    'rosa2':rgb(231, 172, 182),
+    'rosa': rgb(252, 213, 213),
+    'rosa2':rgb(243, 176, 187),
     'verde':  rgb(96, 172, 62),
     'verde2': rgb(147, 199, 75),
     'naranja': rgb(236, 171, 96),
-    'sombra': 0px 5px 5px rgba(0,0,0,0.1),
+    'sombra': 0px 2px 6px 1px rgba(0, 0, 0, 0.25),
     'degradado': linear-gradient(to right, rgb(187, 255, 93), rgb(255, 195, 206)),
 );
 
