--- a/style/style.scss
+++ b/style/style.scss
@@ -1,4 +1,3 @@
-// STYLE ----------------------------------------------------------------------------
 @import url('https://fonts.googleapis.com/css2?family=Mali&family=Quicksand&display=swap');
 
 *{
@@ -8,7 +7,6 @@
     text-align: center;
     list-style: none;
     border-style: none;
-    color: white;
 }
 
 body{
@@ -20,11 +18,10 @@ body{
 @keyframes transitionBody {
     from{
         opacity: 0;
-        transform: rotateY(-15deg);
+        transition-timing-function: ease-in;
     }
     to{
         opacity: 1;
-        transform: rotateY(0);
     }
 }
 
@@ -33,15 +30,20 @@ a{
     color: rgb(95, 131, 211);
 }
 
-a{
+svg{
+    color: white;
+    width: 2rem;
+    height: 2rem;
+}
+
+li{
     svg{
-        color: white;
+        width: 1rem;
+        height: 1rem;
     }
 }
 
 @import "variables";
 @import "tipografia";
-@import "headerNav";
 @import "main";
-@import "footer";
 @import "mediaqueries";
