--- a/style/_mediaqueries.scss
+++ b/style/_mediaqueries.scss
@@ -1,5 +1,8 @@
 // VISTA MOBILE-------------------------------------------------------------------------------
-@media only screen and (max-width: 768px){
+@media only screen and (max-width: 576px){
+    header{
+        display: none;
+    }
     nav{
         margin-bottom: 1rem;
         div{
@@ -9,38 +12,38 @@
             }
             input{
                 height: auto;
-                width: 30%;
+                width: 25%;
                 margin: 1rem;
             }
         }
     }
     main{
-        background-color: white;
-        border-radius: 0.2rem;
         margin: 0.5rem;
         section{
             article{
                 margin: 1rem;
                 img{
                     height: auto;
-                    width: 70%;
+                    width: 100%;
                 }
+            }
+        }
+        button{
+            height: auto;
+        }
+        table{
+            th{
+                padding: 0.2rem;
             }
         }
     }
     aside{
         display: none;
     }
-    footer{
-        @include flex (center, center, wrap);
-        li{
-            text-align: left;
-        }
-    }
 }
 
 // VISTA TABLET -------------------------------------------------------------------------------
-@media only screen and (min-width: 768px){
+@media only screen and (min-width: 576px){
 	body{
         @include grid (10% 80% 10%, auto, 
         "header header header"
@@ -49,11 +52,20 @@
         "footer footer footer"
         );
     }
+    .contenedor--productos{
+        @include grid (10% 10% 70% 10%, auto, 
+        "header header header header"
+        "nav nav nav nav"
+        "aside aside main main"
+        "footer footer footer footer"
+        );
+    }
     header{
         background-color: map-get($map: $colores, $key: 'rosa2');
         div{
             .buscador{
-                width: 8rem;
+                width: 6rem;
+                height: 2rem;
             }
             .logoDesktop{
                 width: 10rem;
@@ -61,7 +73,35 @@
         }
     }
     main{
-        background-color: white;
+        margin: 0.5rem;
+        .gridServicios{
+            display: grid;
+            @include grid (70% 30%, auto, "columna1 columna2");
+            .columna1{
+                grid-area: columna1;
+                margin-right: 1rem;
+            }
+            .columna2{
+                grid-area: columna2;
+            }
+        }
+        .grid{
+            display: grid;
+            @include grid (49% 2% 49%, auto, "columna3 verticalLine columna4");
+            .columna3{
+                grid-area: columna3;
+                padding: 1rem;
+                margin-bottom: 1rem;
+            }
+            .verticalLine{
+                grid-area: verticalLine;
+                border-left: 2px dotted pink;
+                height: 450px;
+            }
+            .columna4{
+                grid-area: columna4;
+            }
+        }
         section{
             article{
                 margin: 1rem;
@@ -70,40 +110,20 @@
                 }
             }
         }
-        input{
-            width: 10rem;
+        button{
+            height: 2rem;
         }
         table{
             th{
                 padding: 0.5rem;
             }
         }
-        .fila{
-            display: flex;
-            .columna{
-                flex: 50%;
-                th{
-                    padding: 0.25rem 1rem;
-                }
-            }
-            .verticalLine{
-                border-left: 2px dotted pink;
-                height: 450px;
-                position: absolute;
-                left: 50%;
-                margin-left: -3px;
-                top: 50;
-            }
-        }
     }
     aside{
-        display: none;
+        margin-top: 0.5rem;
     }
     footer{
         @include flex (space-evenly, flex-start, wrap);
-        li{
-            text-align: left;
-        }
         p{
             position: absolute;
             color: black;
@@ -123,20 +143,6 @@
         "footer footer footer"
         );
     }
-    header{
-        div{
-            .buscador{
-                width: 6rem;
-            }
-            .logoDesktop{
-                width: 10rem;
-            }
-        }
-    }
-    nav{
-        margin: 1rem;
-        border-radius: 0.5rem;  
-    }
     .contenedor--productos{
         @include grid (10% 10% 70% 10%, auto, 
         "header header header header"
@@ -145,7 +151,18 @@
         "footer footer footer footer"
         );
     }
+    header{
+        div{
+            .logoDesktop{
+                width: 8rem;
+            }
+        }
+    }
+    nav{
+        border-radius: 0.5rem;
+    }
     main{
+        margin: 1rem 0rem;
         section{
             article{
                 img{
@@ -153,36 +170,8 @@
                 }
             }
         }
-        input{
-            width: 10rem;
-        }
-            // 2 COLUMNAS --------------------------------------------------------------------
-        .cajaSuperior{
-            background-color: white;
-            border-radius: 0.2rem;
-            h4{
-                color: map-get($map: $colores, $key: 'naranja');
-            }
-        }
-        .columna{
-            background-color: white;
-            padding: 1rem;
-            margin-bottom: 1rem;
-        }
     }
     aside{
-        display: flex;
-    }
-    footer{
-        @include flex (space-evenly, flex-start, wrap);
-        li{
-            text-align: left;
-        }
-        p{
-            position: absolute;
-            color: black;
-            bottom: 0;
-            margin: 0.2rem;
-        }
+        margin-top: 1rem;
     }
 }
