--- a/style/style.css
+++ b/style/style.css
@@ -25,7 +25,7 @@ body {
 }
 a {
   text-decoration: none;
-  color: rgb(95, 131, 211);
+  color: rgb(75, 115, 201);
 }
 
 svg {
@@ -75,8 +75,8 @@ li a:hover {
   border-radius: 0.25rem;
 }
 
-p, b, li, td, label {
-  color: grey;
+p, b, li, th, td, label {
+  color: rgb(107, 94, 94);
 }
 
 header {
@@ -86,18 +86,15 @@ header {
 
 nav {
   grid-area: nav;
-  display: flex;
-  justify-content: space-evenly;
-  align-items: center;
-  flex-wrap: wrap;
   background-color: rgb(243, 176, 187);
   padding: 0.5rem 0rem;
 }
 
 main {
   grid-area: main;
-  border-radius: 0.2rem;
-  grid-auto-columns: auto;
+  background-color: rgb(255, 255, 255);
+  border-radius: 0.5rem;
+  padding: 0.5rem 1rem;
 }
 main section {
   display: flex;
@@ -106,27 +103,24 @@ main section {
   flex-wrap: wrap;
 }
 main section article {
-  background-color: white;
   box-shadow: 0px 2px 6px 1px rgba(0, 0, 0, 0.25);
   border-radius: 0.5rem;
-  margin: 0.5rem;
 }
 main section article img {
   margin-bottom: 0.5rem;
   border-radius: 0.5rem;
 }
-main button, main input[type=submit], main iframe[type=submit] {
+main button, main input[type=submit] {
   background-color: rgb(147, 199, 75);
-  color: white;
-  height: 2rem;
-  border-style: none;
-  border-radius: 0.3rem;
+  color: rgb(255, 255, 255);
   padding: 0rem 0.5rem;
   margin-bottom: 0.5rem;
+  border-style: none;
+  border-radius: 0.3rem;
   transition: 1s;
   transition-timing-function: ease-out;
 }
-main button:hover, main input[type=submit]:hover, main iframe[type=submit]:hover {
+main button:hover, main input[type=submit]:hover {
   background-color: rgb(252, 213, 213);
 }
 main table {
@@ -134,6 +128,7 @@ main table {
   justify-content: center;
   align-items: center;
   flex-wrap: wrap;
+  margin-bottom: 1rem;
 }
 main table th {
   background-color: rgb(243, 176, 187);
@@ -145,43 +140,46 @@ main ol li {
   list-style: decimal;
   text-align: left;
 }
+main ul li {
+  text-align: center;
+}
 main ul li svg {
-  color: rgb(252, 213, 213);
+  color: rgb(243, 176, 187);
 }
 main label {
   display: block;
 }
-main input, main iframe {
+main input {
   height: 2rem;
-  width: 80%;
-  margin: 0.5rem;
+  width: 50%;
+  margin-bottom: 0.5rem;
   border-color: rgb(252, 213, 213);
   border-style: solid;
 }
 main textarea {
-  height: 6rem;
+  height: 8rem;
   width: 80%;
-  border-color: rgb(252, 213, 213);
-  border-style: solid;
+  border: 2px solid rgb(252, 213, 213);
 }
-main input[type=submit], main iframe[type=submit] {
+main input[type=submit] {
   width: 6rem;
 }
 main iframe {
   height: 50%;
-  width: 80%;
+  width: 85%;
+  border-radius: 0.2rem;
 }
 
-main a:link {
+main a {
   text-decoration: underline;
 }
 
 aside {
   grid-area: aside;
-  width: 85%;
-  height: 15%;
-  background-color: rgba(236, 145, 162, 0.514);
+  background-color: rgba(247, 151, 169, 0.582);
   border-radius: 0.5rem;
+  width: 85%;
+  height: 10%;
   display: flex;
   justify-content: center;
   align-items: flex-start;
@@ -197,13 +195,18 @@ aside li {
 footer {
   grid-area: footer;
   background: rgb(147, 199, 75);
-  margin-top: 1rem;
-  padding: 0.5rem;
+  padding-top: 0.5rem;
   position: relative;
-  color: rgb(45, 61, 18);
+}
+footer li {
+  text-align: left;
 }
 
-@media only screen and (max-width: 768px) {
+@media only screen and (max-width: 576px) {
+  header {
+    display: none;
+  }
+
   nav {
     margin-bottom: 1rem;
   }
@@ -211,15 +214,13 @@ footer {
     height: auto;
     width: 15%;
   }
-  nav div input, nav div main iframe, main nav div iframe {
+  nav div input {
     height: auto;
-    width: 30%;
+    width: 25%;
     margin: 1rem;
   }
 
   main {
-    background-color: white;
-    border-radius: 0.2rem;
     margin: 0.5rem;
   }
   main section article {
@@ -227,24 +228,20 @@ footer {
   }
   main section article img {
     height: auto;
-    width: 70%;
+    width: 100%;
+  }
+  main button, main input[type=submit] {
+    height: auto;
+  }
+  main table th {
+    padding: 0.2rem;
   }
 
   aside {
     display: none;
   }
-
-  footer {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-wrap: wrap;
-  }
-  footer li {
-    text-align: left;
-  }
 }
-@media only screen and (min-width: 768px) {
+@media only screen and (min-width: 576px) {
   body {
     display: grid;
     grid-template-columns: 10% 80% 10%;
@@ -252,18 +249,60 @@ footer {
     grid-template-areas: "header header header" "nav nav nav" "main main main" "footer footer footer";
   }
 
+  .contenedor--productos {
+    display: grid;
+    grid-template-columns: 10% 10% 70% 10%;
+    grid-template-rows: auto;
+    grid-template-areas: "header header header header" "nav nav nav nav" "aside aside main main" "footer footer footer footer";
+  }
+
   header {
     background-color: rgb(243, 176, 187);
   }
   header div .buscador {
-    width: 8rem;
+    width: 6rem;
+    height: 2rem;
   }
   header div .logoDesktop {
     width: 10rem;
   }
 
   main {
-    background-color: white;
+    margin: 0.5rem;
+  }
+  main .gridServicios {
+    display: grid;
+    display: grid;
+    grid-template-columns: 70% 30%;
+    grid-template-rows: auto;
+    grid-template-areas: "columna1 columna2";
+  }
+  main .gridServicios .columna1 {
+    grid-area: columna1;
+    margin-right: 1rem;
+  }
+  main .gridServicios .columna2 {
+    grid-area: columna2;
+  }
+  main .grid {
+    display: grid;
+    display: grid;
+    grid-template-columns: 49% 2% 49%;
+    grid-template-rows: auto;
+    grid-template-areas: "columna3 verticalLine columna4";
+  }
+  main .grid .columna3 {
+    grid-area: columna3;
+    padding: 1rem;
+    margin-bottom: 1rem;
+  }
+  main .grid .verticalLine {
+    grid-area: verticalLine;
+    border-left: 2px dotted pink;
+    height: 450px;
+  }
+  main .grid .columna4 {
+    grid-area: columna4;
   }
   main section article {
     margin: 1rem;
@@ -271,32 +310,15 @@ footer {
   main section article img {
     width: 15rem;
   }
-  main input, main iframe {
-    width: 10rem;
+  main button, main input[type=submit] {
+    height: 2rem;
   }
   main table th {
     padding: 0.5rem;
   }
-  main .fila {
-    display: flex;
-  }
-  main .fila .columna {
-    flex: 50%;
-  }
-  main .fila .columna th {
-    padding: 0.25rem 1rem;
-  }
-  main .fila .verticalLine {
-    border-left: 2px dotted pink;
-    height: 450px;
-    position: absolute;
-    left: 50%;
-    margin-left: -3px;
-    top: 50;
-  }
 
   aside {
-    display: none;
+    margin-top: 0.5rem;
   }
 
   footer {
@@ -304,9 +326,6 @@ footer {
     justify-content: space-evenly;
     align-items: flex-start;
     flex-wrap: wrap;
-  }
-  footer li {
-    text-align: left;
   }
   footer p {
     position: absolute;
@@ -323,18 +342,6 @@ footer {
     grid-template-areas: "header header header" ". nav ." ". main ." "footer footer footer";
   }
 
-  header div .buscador {
-    width: 6rem;
-  }
-  header div .logoDesktop {
-    width: 10rem;
-  }
-
-  nav {
-    margin: 1rem;
-    border-radius: 0.5rem;
-  }
-
   .contenedor--productos {
     display: grid;
     grid-template-columns: 10% 10% 70% 10%;
@@ -342,43 +349,23 @@ footer {
     grid-template-areas: "header header header header" ". nav nav ." ". aside main ." "footer footer footer footer";
   }
 
+  header div .logoDesktop {
+    width: 8rem;
+  }
+
+  nav {
+    border-radius: 0.5rem;
+  }
+
+  main {
+    margin: 1rem 0rem;
+  }
   main section article img {
     width: 12.5rem;
   }
-  main input, main iframe {
-    width: 10rem;
-  }
-  main .cajaSuperior {
-    background-color: white;
-    border-radius: 0.2rem;
-  }
-  main .cajaSuperior h4 {
-    color: rgb(236, 171, 96);
-  }
-  main .columna {
-    background-color: white;
-    padding: 1rem;
-    margin-bottom: 1rem;
-  }
 
   aside {
-    display: flex;
-  }
-
-  footer {
-    display: flex;
-    justify-content: space-evenly;
-    align-items: flex-start;
-    flex-wrap: wrap;
-  }
-  footer li {
-    text-align: left;
-  }
-  footer p {
-    position: absolute;
-    color: black;
-    bottom: 0;
-    margin: 0.2rem;
+    margin-top: 1rem;
   }
 }
 
